[metadata]
name = MrWinthrop
version = 0.0.dev0
author = martinc
author_email = martin.cuchet@gmail.com
url = https://github.com/Spigushe/MrWinthrop
description="Discord bot for analyzing the TWDA",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = vampire vtes ccg discord bot twda
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: End Users/Desktop
	Natural Language :: English
	Operating System :: OS Independent
	Environment :: Plugins
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Topic :: Games/Entertainment

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
	setuptools
install_requires =
	krcg >= 2.12
	krcg-cli >= 2.2
	discord
	setuptools
	unidecode

[options.extras_require]
dev =
	black
	doc8
	flake8
	ipython
	pytest
	python-dotenv
	zest.releaser[recommended]

[options.packages.find]
exclude =
	tests

[options.entry_points]
console_scripts =
	mrw-bot = mrw_bot:main

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[tool:pytest]
# discord uses aiohttp, which still uses the coroutine decorator
filterwarnings =
	ignore:.*"@coroutine" decorator is deprecated.*:DeprecationWarning

[zest.releaser]
create-wheel = yes
